--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Test</h1>
-    <script src="script.js"></script>
+    <div class="container">
+      <header>
+        <div>
+          <h4>Move App</h4>
+        </div>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+        </nav>
+      </header>
+      <main></main>
+      <footer>Hisham A C_2025</footer>
+    </div>
+    <script defer src="script.js"></script>
   </body>
 </html>
