feat: Fetch and display trending movies
- Fetches a list of trending movies from the TMDB API v3.
- Creates a movie card for each movie, displaying its poster and title.
- Renders the cards dynamically into the main grid container.
- Implements basic error handling for the API request.
- Handles missing movie posters by providing a fallback image path.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <a href="#">About</a>
         </nav>
       </header>
-      <main></main>
+      <main id="movies-list"></main>
       <footer>Hisham A C_2025</footer>
-    </div>
+          </div>
     <script defer src="script.js"></script>
   </body>
 </html>
