feat: Complete popular movies grid and movie cards display
- Implement TMDB API integration for trending movies
- Add responsive CSS Grid layout with auto-fit columns
- Create movie cards with poster images and titles
- Implement error handling for API failures
- Add responsive design for mobile/desktop compatibility

Closes: Story 1.1, Story 1.3
Status: Epic 1 - 50% complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       </header>
       <main id="movies-list"></main>
       <footer>Hisham A C_2025</footer>
-          </div>
-    <script defer src="script.js"></script>
+    </div>
+    <script src="config.js"></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
