--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a href="#">About</a>
         </nav>
       </header>
-      <main id="movies-list"></main>
+      <main id="movies-list"><div class="loading-text">Loading...</div></main>
       <footer>Hisham A C_2025</footer>
     </div>
     <script src="config.js"></script>
