feat: implement Load More functionality for movie pagination
- Add Load More button with proper loading states
- Implement pagination logic to fetch next page of trending movies
- Append new movies to existing grid without replacing content
- Add button state management (disabled during loading, hidden when no more pages)
- Handle edge cases for API pagination limits
- Improve user experience with clear loading feedback

Resolves Story 1.4: As a user, I want to be able to load more popular movies by clicking a 'Load More' button, so I can browse beyond the first page of results.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         </nav>
       </header>
       <main id="movies-list"><div class="loading-text">Loading...</div></main>
+
+      <div class="load-more-container">
+        <button id="load-more-btn">Load More</button>
+      </div>
       <footer>Hisham A C_2025</footer>
     </div>
-    <script src="config.js"></script>
+    <script src="config.js" defer></script>
     <script src="main.js" defer></script>
   </body>
 </html>
